express/code/blocks/print-product-detail/print-product-detail.css
/* ... */
.pdpx-price-info-row {
  display: flex;
  align-items: baseline;
  gap: var(--figma-spacing-75);
}
.pdpx-price-label {
  font-size: 20px;
  font-weight: 700;
}
.pdpx-compare-price-label {
  text-decoration: line-through;
  font-size: 14px;
}
.pdpx-compare-price-info-label {
  font-size: 14px;
  text-align: end;
  white-space: nowrap;
}

.pdpx-compare-price-info-icon-container {
  position: relative;
  .pdpx-compare-price-info-icon-button {
    background: transparent;
    border: none;
    padding: 0;
    margin: 0;
    align-self: end;
    cursor: pointer;
    width: max-content;
    .pdpx-compare-price-info-icon {
      width: 12px;
    }
  }
  .pdpx-info-tooltip-content {
    position: absolute;
    display: none;
    right: 0;
    background-color: #323232;
    color: #fff;
    padding: 15px;
    border-radius: 8px;
    width: 200px;
    z-index: 1;
    .pdpx-info-tooltip-content-title {
      font-size: 14px;
      font-weight: 700;
      color: #fff;
    }
    .pdpx-info-tooltip-content-description {
      font-size: 12px;
      margin: 0;
      padding: 0;
      padding-top: 10px;
    }
  }
}

.pdpx-savings-text {
  font-size: 12px;
  font-weight: 700;
  color: #05834e;
}
.pdpx-price-info-container {
  display: flex;
  flex-direction: column;
}
.pdpx-product-hero-image {
  width: 100%;
  border-radius: 12px;
}
.pdpx-product-ratings-lockup-container {
  display: flex;
  flex-direction: row;
  align-items: baseline;
  gap: var(--figma-spacing-75);
  .pdpx-product-info-header-ratings-star {
    width: 17px;
  }
  .pdpx-star-ratings {
    display: flex;
    align-self: anchor-center;
  }
  .pdpx-ratings-number {
    font-weight: 700;
  }
  .pdpx-ratings-amount {
    background: transparent;
    font-size: 14px;
    border: none;
    padding: 0;
    margin: 0;
    text-decoration-line: underline;
    cursor: default;
  }
}
.pdpx-delivery-estimate-pill {
  display: flex;
  flex-direction: row;
  align-items: center;
  background-color: #e0e2ff;
  border-radius: 8px;
  width: fit-content;
  padding: var(--figma-spacing-100);
  gap: var(--figma-spacing-75);
  margin-bottom: 0;
}
.pdpx-product-hero-image-container {
  margin-bottom: var(--figma-spacing-200);
  aspect-ratio: 1/1;
  border-radius: 12px;
  overflow: hidden;
  object-fit: contain;
  object-position: center;
}

.pdpx-image-thumbnail-carousel-container {
  display: flex;
  flex-direction: row;
  overflow-x: scroll;
  scroll-behavior: smooth;
  gap: var(--figma-spacing-100);
}
.pdpx-image-thumbnail-carousel-item {
  border-radius: 8px;
  overflow: hidden;
  flex-shrink: 0;
  width: 76px;
  height: 76px;
  border: 1px solid transparent;
  background-color: transparent;
  padding: 0;
  cursor: pointer;
}

.pdpx-image-thumbnail-carousel-item.selected {
  border: 1px solid #5258e4;
}

/* CHECKOUT BUTTON */
.pdpx-checkout-button-container {
  position: sticky;
  bottom: 0;
  background: #fff;
  margin-top: var(--figma-spacing-200);
  width: 100%;
  order: 4;
  a.pdpx-checkout-button {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 10px;
    margin-bottom: var(--figma-spacing-100);
    background-color: #5258e4;
    color: #fff;
    border: none;
    border-radius: 24px;
    padding: 13px;
    cursor: pointer;
  }
}
.pdpx-checkout-button-container::before {
  content: '';
  position: absolute;
  bottom: 100%;
  left: 0;
  right: 0;
  height: var(--figma-spacing-900);
  pointer-events: none;
  background: linear-gradient(to top, white 20%, rgba(255, 255, 255, 0) 100%);
}

.pdpx-checkout-button-text {
  font-size: 18px;
  font-weight: 700;
}

.pdpx-checkout-button-subhead {
  display: none;
  flex-direction: row;
  align-items: baseline;
  justify-content: center;
  gap: 2px;
}
.pdpx-checkout-button-disabled a.pdpx-checkout-button {
  background-color: #505050;
  border-radius: 10px;
  cursor: not-allowed;
  pointer-events: none;
  font-weight: 400;
  span.pdpx-checkout-button-text {
    font-size: 16px;
    font-weight: 400;
  }
}
/* END CHECKOUT BUTTON */

/* Pill Selector */
.pdpx-pill-selector-container {
  margin-bottom: var(--figma-spacing-400);
  .pdpx-pill-selector-label-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: var(--figma-spacing-100);
    .pdpx-pill-selector-label-label {
      font-weight: 700;
    }
  }
}

.pdpx-pill-selector-label {
  display: block;
  font-weight: 700;
  margin-bottom: var(--figma-spacing-100);
}

.pdpx-pill-selector-options-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: var(--figma-spacing-100);
}
.pdpx-pill-container {
  display: flex;
  flex-direction: row;
  min-width: 150px;
  background-color: white;
  overflow: hidden;
  border-radius: 8px;
  border: 1px solid #dadada;
  padding: 0px;
  cursor: pointer;
}
.pdpx-pill-image-container {
  width: 54px;
  height: 54px;
}
.pdpx-pill-image {
  width: 100%;
}
.pdpx-pill-text-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  min-width: 92px;
  gap: var(--figma-spacing-75);
  padding: var(--figma-spacing-100);
  padding-right: var(--figma-spacing-400);
}
.pdpx-pill-text-name {
  font-size: 14px;
  font-weight: 700;
  color: black;
}
.pdpx-pill-text-price {
  font-size: 14px;
  font-weight: 400;
  color: #505050;
}

/* DRAWER */
.pdpx-size-chart-container {
  overflow-y: scroll;
}
.pdpx-drawer-hero-image-container {
  aspect-ratio: 3 / 2;
  width: 100%;
  overflow: hidden;
  flex-shrink: 0;
  margin-bottom: var(--figma-spacing-400);
  .pdpx-drawer-hero-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: bottom;
    border-radius: 8px;
  }
}
/* ... */

